# fastapi-flake-test

./: flake.nix  main.py  pyproject.toml
base_api/: main.py
