[tool.poetry]
name = "fastapi-nix-test"
version = "0.1.0"
description = ""
authors = ["Athul Cyriac Ajay <athul8720@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
start = "app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
